Use string resouces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">Arrivals for PATH</string>
+    <string name="refresh_action">Refresh</string>
+    <string name="more_item_actions">More</string>
+    <string name="shorten_names_action_text">Shorten station names</string>
+    <string name="show_opposite_direction_action_text">Show opposite direction</string>
+    <string name="loading">Loading …</string>
+    <string name="error_icon">Error icon</string>
+    <string name="load_trains_error_long">An error occurred while loading next trains</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="stale_data_explanation">, however arrivals below will continue to estimate based on last known ETAs</string>
+    <string name="no_internet_icon">No internet icon</string>
+    <string name="load_trains_error">Couldn\'t load next trains</string>
+    <string name="try_again_later_body_text">Try again later or try the official app for now</string>
+    <string name="try_again_action">Try again</string>
+    <string name="try_official_app_action">Try the official app</string>
+    <string name="minute">minute</string>
+    <string name="second">second</string>
+    <string name="seconds">seconds</string>
+    <string name="minutes">minutes</string>
+    <string name="last_updated">last updated</string>
+    <string name="just_now">just now</string>
+    <string name="ago">ago</string>
+    <string name="precise_location_rationale">Precise location is preferred over coarse location to show the closest station</string>
+    <string name="location_rationale">Location is used to show you the closest stations and routes</string>
+    <string name="allow">Allow</string>
+    <string name="deny">Deny</string>
+    <string name="grant_settings_access">Please grant access on the Settings screen</string>
+    <string name="open_settings">Open Settings</string>
+    <string name="dont_ask_again">Don\'t ask again</string>
+    <string name="no_trains">"No upcoming trains at "</string>
+    <string name="no_trains_bound">"No upcoming %1$s-bound trains at "</string>
+    <string name="now">now</string>
+    <string name="mins_singular">min</string>
+    <string name="mins_plural_part">s</string>
+    <string name="mins_plural">mins</string>
+    <string name="to">"To "</string>
 </resources>
