--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="couldn_t_load_path_alerts">Couldn\'t load PATH Alerts</string>
     <string name="loading_path_alerts">Loading PATH Alerts …</string>
     <string name="no_path_alerts">No PATH Alerts</string>
-    <string name="path_alerts_title">PATH Alerts (%1$s)</string>
+    <string name="path_alerts_title">PATH Alerts</string>
     <string name="expandable_arrow_content_description">Expandable Arrow</string>
     <string name="default_alert_title">Alert</string>
     <string name="undo">Undo</string>
