--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="show_only_to_nynj">Show only to %1$s</string>
     <string name="show_to_nynj_too">Show to %1$s too</string>
     <string name="dismiss">Dismiss</string>
+    <string name="view_older">View older</string>
+    <string name="view_older_route">View older %1$s alerts</string>
 </resources>
