SHow alerts with train as well.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="view_older_route">View older %1$s alerts</string>
     <string name="hide_elevator_alerts">⦸ Hide elevator alerts »</string>
     <string name="show_elevator_alerts">Show elevator alerts</string>
+    <string name="alerts_on_this_route">Alerts on this route</string>
 </resources>
